bank-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-app-service
  labels:
    app: bank-app
spec:
  type: NodePort
  selector:
    app: bank-app
  ports:
    - protocol: TCP
      port: 8989
      targetPort: 8989
      nodePort: 30090
