bank-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: bank-app.local  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bank-app-service
            port:
              number: 8989
